--- a/sub.html
+++ b/sub.html
@@ -45,7 +45,7 @@
         <div class="gnb_box">
             <nav>
                 <ul class="gnb">
-                    <li><a href="sub.html">가구가아아아아아</a>
+                    <li><a href="sub.html">가구</a>
                         <ul class="lnb">
                             <li><a href="#">소파/체어</a>
                                 <ul class="lnb_sub">
