이미지 수정

--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                고스트 필드 쿠션(아이보리)
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">73,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -376,11 +376,11 @@
                             <figure>
                                 <img src="images/sec1-img2.png" alt="">
                                 <span class="favorite">♡</span>
-                            </figure>
+                            </figure> 
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                하운드 피규어 파티 버킷(실버)
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">319,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -392,9 +392,9 @@
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                아나 메달리온 이불커버_K(블루)
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">259,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -402,13 +402,13 @@
                     <li>
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img0.png" alt="">
+                                <img src="images/sec1-img4.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                드레이퍼 필러 홀더_멀티(브론즈)
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">149,400<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -416,13 +416,13 @@
                     <li>
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img1.png" alt="">
+                                <img src="images/sec1-img5.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                스카이라 폴리쉬드 니켈 바 카트
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">790,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -430,13 +430,13 @@
                     <li>
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img2.png" alt="">
+                                <img src="images/sec1-img6.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                티베스탄 바 스툴
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">118,800<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -444,13 +444,13 @@
                     <li>
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img3.png" alt="">
+                                <img src="images/sec1-img7.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                코스트라인 니트 쓰로우_50x60
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">140,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -473,11 +473,10 @@
                             <figure><img src="images/sec2-img0.png" alt=""></figure>
                         </a>
                         <div class="cont_ex">
-                            <span class="sale">60% sale</span>
-                            <div class="title">샤토 우드 레이지 수잔
-                                <p>(다크 브라운)</p>
+                            <span class="sale">40% sale</span>
+                            <div class="title">바이런 번칭 커피테이블
                             </div>
-                            <div class="price"><span> 180,000원</span>72,000원</div>
+                            <div class="price"><span> 698,000원</span>418,000원</div>
                         </div>
                     </li>
                     <li>
@@ -498,10 +497,10 @@
                         </a>
                         <div class="cont_ex">
                             <span class="sale">60% sale</span>
-                            <div class="title">샤토 우드 레이지 수잔
-                                <p>(다크 브라운)</p>
+                            <div class="title">토스카나 식탁 벤치_미디엄
+                                <p>(투스칸 체스트넛)</p>
                             </div>
-                            <div class="price"><span> 180,000원</span>72,000원</div>
+                            <div class="price"><span> 1,400,000원</span>560,000원</div>
                         </div>
                     </li>
                     <li>
@@ -510,10 +509,9 @@
                         </a>
                         <div class="cont_ex">
                             <span class="sale">60% sale</span>
-                            <div class="title">샤토 우드 레이지 수잔
-                                <p>(다크 브라운)</p>
+                            <div class="title">지니 크리스탈 앰비언트 램프
                             </div>
-                            <div class="price"><span> 180,000원</span>72,000원</div>
+                            <div class="price"><span> 201,000원</span>80,400원</div>
                         </div>
                     </li>
                 </ul>
@@ -536,9 +534,9 @@
                             </figure>
                             <div class="cont_ex">
                                 <div class="title">
-                                    클라라 침대_Q(스카이 화이트)
+                                    그린우드 프린트 이불커버_Q
                                 </div>
-                                <div class="price">1,824,000<span>원</span></div>
+                                <div class="price">249,000<span>원</span></div>
                                 <span class="best">best</span>
                                 <span class="new">new</span>
                             </div>
@@ -547,14 +545,14 @@
                     <li>
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img0.png" alt="">
+                                <img src="images/sec3-img1.png" alt="">
                                 <span class="favorite">♥</span>
                                 <!-- <span class="no_favorite">♡</span> -->
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                셰이 업홀스터드 코튼 캔버스 악센트체어
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">632,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="new">new</span>
                         </a>
@@ -562,14 +560,14 @@
                     <li>
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img0.png" alt="">
+                                <img src="images/sec3-img2.png" alt="">
                                 <span class="favorite">♥</span>
                                 <!-- <span class="no_favorite">♡</span> -->
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                모루카 미디어 콘솔
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">1,960,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="new">new</span>
                         </a>
@@ -577,14 +575,14 @@
                     <li>
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img0.png" alt="">
+                                <img src="images/sec3-img3.png" alt="">
                                 <span class="favorite">♥</span>
                                 <!-- <span class="no_favorite">♡</span> -->
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                시에나 스톤 라운드 악센트 테이블
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">540,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="new">new</span>
                         </a>
@@ -592,14 +590,14 @@
                     <li>
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img0.png" alt="">
+                                <img src="images/sec3-img4.png" alt="">
                                 <span class="favorite">♥</span>
                                 <!-- <span class="no_favorite">♡</span> -->
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                알로 패션 쿠페(블러쉬)
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">22,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="new">new</span>
                         </a>
@@ -620,13 +618,13 @@
                         data-3500="border-radius:0">
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img0.png" alt="">
+                                <img src="images/sec4-img1.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                에어룸 스캘럽 하트 캔디 디쉬
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">16,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -635,13 +633,13 @@
                         data-3500="border-radius:0">
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img1.png" alt="">
+                                <img src="images/sec4-img2.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                모르간 메모리폼 바쓰러그
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">62,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -650,13 +648,13 @@
                     data-3500="border-radius:0">
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img2.png" alt="">
+                                <img src="images/sec4-img3.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                플러쉬 로브
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">119,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -665,13 +663,13 @@
                     data-3500="border-radius:0">
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img3.png" alt="">
+                                <img src="images/sec4-img4.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                패리스 크리스탈 샹들리에
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">520,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -680,13 +678,13 @@
                     data-3500="border-radius:0">
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img0.png" alt="">
+                                <img src="images/sec4-img5.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                웰스 레더 스위블 암체어
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">2,916,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -695,13 +693,13 @@
                     data-3500="border-radius:0">
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img1.png" alt="">
+                                <img src="images/sec4-img6.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                씨엘로 내추럴 파이버 라운드 러그
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">312,000<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -710,13 +708,13 @@
                     data-3500="border-radius:0">
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img2.png" alt="">
+                                <img src="images/sec4-img7.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                허니컴 럼바 쿠션커버_16x26
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">17,400<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -725,13 +723,13 @@
                     data-3500="border-radius:0">
                         <a href="#">
                             <figure>
-                                <img src="images/sec1-img3.png" alt="">
+                                <img src="images/sec4-img1.png" alt="">
                                 <span class="favorite">♡</span>
                             </figure>
                             <div class="title">
-                                클라라 침대_Q(스카이 화이트)
+                                파크 힐 랜턴
                             </div>
-                            <div class="price">1,824,000<span>원</span></div>
+                            <div class="price">78,300<span>원</span></div>
                             <span class="best">best</span>
                             <span class="sale">sale</span>
                         </a>
@@ -827,6 +825,7 @@
             <li><a href="#"><img src="images/product2.png" alt=""></a></li>
             <li><a href="#"><img src="images/product3.png" alt=""></a></li>
             <li><a href="#"><img src="images/product4.png" alt=""></a></li>
+            <li><a href="#"><div class="top">TOP</div></a></li>
         </ul>
     </div>
 
