--- a/sub.html
+++ b/sub.html
@@ -45,7 +45,7 @@
         <div class="gnb_box">
             <nav>
                 <ul class="gnb">
-                    <li><a href="sub.html">가구가아아아아아</a>
+                    <li><a href="sub.html">가구</a>
                         <ul class="lnb">
                             <li><a href="#">소파/체어</a>
                                 <ul class="lnb_sub">
@@ -523,10 +523,11 @@
     <div class="prod_today">
         <h2>최근 본 상품</h2>
         <ul>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#"><img src="images/product1.png" alt=""></a></li>
+            <li><a href="#"><img src="images/product2.png" alt=""></a></li>
+            <li><a href="#"><img src="images/product3.png" alt=""></a></li>
+            <li><a href="#"><img src="images/product4.png" alt=""></a></li>
+            <li><a href="#"><div class="top">TOP</div></a></li>
         </ul>
     </div>
 
